--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -632,7 +632,7 @@
 "ui_settings_nsfw_content_dont_show" = "Не показувати у глобальній стрічці";
 "ui_settings_nsfw_content_blur" = "Тільки замазувати";
 "ui_settings_nsfw_content_show" = "Показувати";
-"ui_settings_view_of_posts" = "Вигляд постів";
+"ui_settings_view_of_posts" = "Вигляд дописів";
 "ui_settings_view_of_posts_old" = "Старий";
 "ui_settings_view_of_posts_microblog" = "Мікроблог";
 "ui_settings_main_page" = "Головна сторінка";
@@ -885,15 +885,15 @@
 "nt_from" = "від";
 "nt_yours_adjective" = "вашим";
 "nt_yours_feminitive_adjective" = "вашою";
-"nt_post_nominative" = "пост";
-"nt_post_instrumental" = "постом";
+"nt_post_nominative" = "допис";
+"nt_post_instrumental" = "дописом";
 "nt_note_instrumental" = "нотаткою";
 "nt_photo_instrumental" = "фотографією";
 "nt_topic_instrumental" = "темою";
 
 "nt_you_were_mentioned_u" = "Вас згадав користувач";
 "nt_you_were_mentioned_g" = "Вас згадала група";
-"nt_mention_in_post_or_comms" = "у пості або під коментарями поста";
+"nt_mention_in_post_or_comms" = "у дописі або під коментарями дописа";
 "nt_mention_in_photo" = "в обговоренні фотографії";
 "nt_mention_in_video" = "в обговоренні відеозапису";
 "nt_mention_in_note" = "в обговоренні під";
@@ -1024,12 +1024,12 @@
 "appjs_payment_total" = "Підсумкова сума до оплати";
 "appjs_payment_confirm" = "Сплатити";
 "appjs_err_funds" = "Не вдалося сплатити покупку: недостатньо коштів.";
-"appjs_wall_post" = "Опублікувати пост";
-"appjs_wall_post_desc" = "хоче опублікувати на вашій стіні пост";
+"appjs_wall_post" = "Опублікувати допис";
+"appjs_wall_post_desc" = "хоче опублікувати на вашій стіні допис";
 "appjs_act_friends" = "вашим Друзям";
 "appjs_act_friends_desc" = "додавати користувачів у друзі та читати ваш список друзів";
 "appjs_act_wall" = "вашій Стіні";
-"appjs_act_wall_desc" = "дивитися ваші новини, вашу стіну та створювати на ній пости";
+"appjs_act_wall_desc" = "дивитися ваші новини, вашу стіну та створювати на ній дописи";
 "appjs_act_messages" = "вашим повідомленням";
 "appjs_act_messages_desc" = "читати та писати від вашого імені повідомлення";
 "appjs_act_groups" = "вашим Спільнотам";
@@ -1272,11 +1272,11 @@
 "login_required_error_comment" = "Щоб переглянути цю сторінку, потрібно зайти на сайт.";
 "captcha_error" = "Неправильно введені символи";
 "captcha_error_comment" = "Переконайтеся, що ви правильно заповнили поле з CAPTCHA.";
-"failed_to_publish_post" = "Не вдалося опублікувати пост";
-"failed_to_delete_post" = "Не вдалося видалити пост";
+"failed_to_publish_post" = "Не вдалося опублікувати допис";
+"failed_to_delete_post" = "Не вдалося видалити допис";
 "media_file_corrupted" = "Файл медіаконтенту пошкоджено.";
 "media_file_corrupted_or_too_large" = "Файл медіаконтенту пошкоджений або файл занадто великий.";
-"post_is_empty_or_too_big" = "Пост порожній чи надто великий.";
+"post_is_empty_or_too_big" = "Допис порожній чи надто великий.";
 "post_is_too_big" = "Допис надто великий.";
 "error_deleting_suggested" = "Ви не можете видалити Ваш прийнятий допис";
 "error_invalid_wall_value" = "Неправильне значення стіни";
@@ -1749,7 +1749,7 @@
 "tour_section_8_text_1" = "У глобальній стрічці будуть показуватися дописи всіх користувачів сайту та груп";
 "tour_section_8_text_2" = "Перегляд цього розділу може не рекомендуватися для чутливих і вразливих людей";
 "tour_section_8_bottom_text_1" = "Дизайн глобальної стрічки за дизайном ніяк не відрізняється від локальної";
-"tour_section_8_bottom_text_2" = "У стрічці є безліч типів контенту: починаючи від звичайних фото і відео, і закінчуючи анонімними постами й опитуваннями";
+"tour_section_8_bottom_text_2" = "У стрічці є безліч типів контенту: починаючи від звичайних фото і відео, і закінчуючи анонімними дописами й опитуваннями";
 
 "tour_section_9_text_1" = "На сайті безліч груп, присвячені різним темам";
 "tour_section_9_text_2" = "Ви можете приєднатися до будь-якої групи. А якщо не знайшли відповідну, то можна створити власну";
@@ -1782,14 +1782,14 @@
 "tour_section_12_title_3" = "Редагування правого меню";
 "tour_section_12_text_3_1" = "За потреби, ви можете приховати непотрібні розділи сайту";
 "tour_section_12_text_3_2" = "<b>Нагадування: </b>Розділи першої необхідності (Моя Сторінка; Мої Друзі; Мої Відповіді; Мої Налаштування) приховати не можна";
-"tour_section_12_title_4" = "Вид постів";
-"tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтакті, то ви завжди можете змінити вигляд постів на Мікроблог";
-"tour_section_12_text_4_2" = "Вид постів можна змінювати між двома варіантами в будь-який час";
-"tour_section_12_text_4_3" = "<b>Зверніть увагу</b>, що якщо обрано старий вид відображення постів, то останні коментарі довантажуватися не будуть";
+"tour_section_12_title_4" = "Вид дописів";
+"tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтакті, то ви завжди можете змінити вигляд дописів на Мікроблог";
+"tour_section_12_text_4_2" = "Вид дописів можна змінювати між двома варіантами в будь-який час";
+"tour_section_12_text_4_3" = "<b>Зверніть увагу</b>, що якщо обрано старий вид відображення дописів, то останні коментарі довантажуватися не будуть";
 "tour_section_12_bottom_text_1" = "Сторінка встановлення фону";
 "tour_section_12_bottom_text_2" = "Приклади сторінок зі встановленим фоном";
 "tour_section_12_bottom_text_3" = "За допомогою цієї можливості ви можете додати своєму профілю більше індивідуальності";
-"tour_section_12_bottom_text_4" = "Старий вигляд постів";
+"tour_section_12_bottom_text_4" = "Старий вигляд дописів";
 "tour_section_12_bottom_text_5" = "Мікроблог";
 
 "tour_section_13_title_1" = "Ваучер";
