--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -143,6 +143,16 @@
 "updated_at" = "Оновлено $1";
 "user_banned" = "На жаль, нам довелося заблокувати сторінку користувача <b>$1</b>.";
 "user_banned_comment" = "Коментар модератора:";
+"closed_page" = "Закрита сторінка";
+"limited_access_to_page_m" = "$1 обмежив доступ до своєї сторінки.";
+"limited_access_to_page_f" = "$1 обмежила доступ до своєї сторінки.";
+"you_can_add" = "Ви можете";
+"add_to_friends_m" = "додати його в друзі.";
+"add_to_friends_f" = "додати її в друзі.";
+"register_to_access_page_m" = "Зареєстуйтесь, щоб отримати доступ до його сторінки.";
+"register_to_access_page_f" = "Зареєструйтесь, щоб отримати доступ до її сторінки.";
+"private_profile_warning" = "Цей профіль закритий, але ви маєте до нього доступ, тому що ви - адміністратор.";
+"private_profile_warning_desc" = "Поважайте право на особисте життя та не зловживайте цією можливістю.";
 "verified_page" = "Верифікована сторінка";
 "user_is_blocked" = "Користувача заблоковано";
 "before" = "до";
@@ -191,9 +201,14 @@
 "my_news" = "Мої новини";
 "all_news" = "Усі новини";
 "posts_per_page" = "Кількість записів на сторінці";
+"show_ignored_sources" = "Відображати ігноровані джерела";
 "attachment" = "Вкладення";
 "post_as_group" = "Від імені спільноти";
 "comment_as_group" = "Від імені спільноти";
+"add_source" = "Додавання джерела";
+"set_source" = "Зазначити джерело";
+"source" = "Джерело";
+"set_source_tip" = "Якщо ви використовуєте матеріали інших авторів, важливо вказувати посилання на оригінал.<br>Зробити це ви можете нижче.";
 "add_signature" = "Підпис автора";
 "contains_nsfw" = "Містить NSFW-контент";
 "nsfw_warning" = "Даний запис може містити контент 18+";
@@ -211,10 +226,20 @@
 "reply" = "Відповісти";
 "post_is_ad" = "За цей допис заплатили";
 "edited_short" = "ред.";
+"feed_settings" = "Налаштування стрічки";
+"ignored_sources" = "Ігноровані джерела";
+"ignore_user" = "Ігнорувати користувача";
+"unignore_user" = "Не ігнорувати користувача";
+"ignore_club" = "Ігнорувати групу";
+"unignore_club" = "Не ігнорувати групу";
+"no_ignores_count" = "Ігнорованих джерел немає.";
+"stop_ignore" = "Не ігнорувати";
+"start_from_page" = "Починати зі сторінки";
 "all_posts" = "Всі дописи";
 "users_posts" = "Дописи $1";
 "clubs_posts" = "Дописи суспільства";
 "others_posts" = "Чужі дописи";
+"show_more" = "Відобразити більше";
 
 /* Friends */
 
@@ -226,6 +251,9 @@
 "friends_reject" = "Скасувати заявку";
 "friends_accept" = "Прийняти заявку";
 "friends_leave_in_flw" = "Залишити у підписниках";
+"friends_add_msg" = "Тепер ви друзі.";
+"friends_rej_msg" = "Ви залишили користувача в підписниках.";
+"friends_rem_msg" = "Ви видалили користувача зі списку своїх друзів.";
 "send_message" = "Відправити повідомлення";
 "incoming_req" = "Підписники";
 "outcoming_req" = "Вихідні";
@@ -424,15 +452,16 @@
 "groups_avatar" = "Гарне фото зробить Вашу спільноту більш популярним.";
 "formats_avatar" = "Ви можете завантажити зображення у форматі JPG, GIF або PNG.";
 "troubles_avatar" = "Якщо виникають проблеми із завантаженням, спробуйте вибрати фотографію меншого розміру.";
-"webcam_avatar" = "Якщо ваш комп'ютер оснащений веб-камерою, Ви можете <a id='_takeSelfie'>зробити миттєву фотографію »</a>";
-
-"update_avatar_notification" = "Фотографію профілю оновлено";
-"update_avatar_description" = "Натисніть, щоб перейти до перегляду";
+"webcam_avatar" = "Якщо ваш комп'ютер має камерою, Ви можете <a id='_takeSelfie'>зробити миттєву фотографію</a>";
+"publish_on_wall" = "Опублікувати допис на стіні";
+"take_snapshot" = "Зробити знімок";
+"your_browser_doesnt_support_webcam" = "Ваш браузер не підтримує знімання відео з камери."
+"selected_area_user" = "Обрана область буде відображатися на вашій сторінці.";
+"selected_area_club" = "Обрана область буде показуватися на сторінці спільноти.";
+"selected_area_rotate" = "Якщо орієнтація зображення неправильна, фотографію можна повернути.";
 
 "deleting_avatar" = "Видалення фотографії";
 "deleting_avatar_sure" = "Ви дійсно хочете видалити аватар?";
-
-"deleted_avatar_notification" = "Фотографію успішно видалено";
 
 "save_changes" = "Зберегти зміни";
 
@@ -587,6 +616,7 @@
 "search_for_apps" = "Пошук додатків";
 "search_for_notes" = "Пошук нотаток";
 "search_for_audios" = "Пошук музики";
+"search_for_audios_playlists" = "Пошук списків відтворення";
 "search_button" = "Знайти";
 "search_placeholder" = "Почніть вводити будь-яке ім'я, назву чи слово";
 "results_zero" = "Жодного результату";
@@ -613,6 +643,9 @@
 "privacy_value_only_me" = "Тільки я";
 "privacy_value_only_me_dative" = "Тільки мені та Кирилу Буданову";
 "privacy_value_nobody" = "Ніхто";
+"profile_type" = "Тип профіля";
+"profile_type_open" = "Відкритий";
+"profile_type_closed" = "Закритий";
 "your_email_address" = "Адрес Вашої електронної пошти";
 "your_page_address" = "Адрес Вашої сторінки";
 "page_address" = "Адрес сторінки";
@@ -707,6 +740,15 @@
 "disable_2fa" = "Вимкнути 2FA";
 "viewing" = "Переглянути";
 
+/* OAuth */
+"identifies_itself_as" = "ідентифікуюче себе як $1";
+"located_at_url" = "розміщене за адресою $1";
+"wants_your_token" = "запитує доступ до вашого акаунта";
+"app_will_have_access_to" = "Застосунку буде доступно:";
+"oauth_scope_all" = "інформація сторінки, оновлення статусу, список друзів, фотографії, публікація дописів, аудіозаписи, відео, повідомлення, повідомлення, подарунки, <b>ваша адреса електронної пошти</b>, опитування, групи, обговорення, нотатки, <b>голоси</b>, лайки та коментарі";
+"oauth_grant" = "Дозволити";
+"oauth_deny" = "Скасувати";
+
 /* Sorting */
 
 "sort_randomly" = "Сортувати випадково";
@@ -743,6 +785,7 @@
 
 /* Audios */
 
+"my" = "Моє";
 "audios" = "Аудіозаписи";
 "audio" = "Аудіо";
 "playlist" = "Список відтворення";
@@ -758,7 +801,7 @@
 
 "limits" = "Ліміти";
 "select_audio" = "Оберіть аудіо з вашого пристрою";
-"audio_requirements" = "Аудіо має тривати від $1с до $2 хвилин, важити до $3MB та мати аудіопотік.";
+"audio_requirements" = "Аудіо має тривати від $1 секунди до $2 хвилин, мати розмір до $3 МБ та мати аудіопотік.";
 "audio_requirements_2" = "Аудіо не має порушувати авторські права";
 "you_can_also_add_audio_using" = "Ви також можете додати аудіо з числа вже завантажених файлів за допомогою";
 "search_audio_inst" = "пошуку аудіо";
@@ -789,6 +832,7 @@
 "my_playlists" = "Мій список відтворення";
 "playlists" = "Списки відтворення";
 "audios_explicit" = "Має нецензурну лексику";
+"audios_unlisted" = "Приховано з пошуку";
 "withdrawn" = "Вилучено";
 "deleted" = "Видалено";
 "owner" = "Власник";
@@ -822,7 +866,7 @@
 "delete_playlist" = "Видалити список відтворення";
 "playlist_cover" = "Обкладинка списку відтворення";
 
-"playlists_user" = "Список відтворення користувачів";
+"playlists_user" = "Список відтворення користувача";
 "playlists_club" = "Списки відтворення груп";
 "change_cover" = "Змінити обкладинку";
 "playlist_cover" = "Обкладинка списку відтворення";
@@ -839,7 +883,12 @@
 "listens_count_many" = "$1 прослуховувань";
 "listens_count_other" = "$1 слухає";
 
-"add_audio_to_club" = "Додати аудіо до групи";
+"add_audio_to_club" = "Додати аудіо до спільноти";
+"add_audio" = "Додавання аудіо";
+"add_audio_limitations" = "Можна обрати до 10 спільнот/плейлистів.";
+"to_club" = "В спільноту";
+"to_playlist" = "В список відтворення";
+"audio_was_successfully_added" = "Аудіозапис було додано.";
 "what_club_add" = "До якої групи ви хочете додати пісню?";
 "group_has_audio" = "Ця група вже має цю пісню.";
 "group_hasnt_audio" = "Ця група не має цієї пісні.";
@@ -847,6 +896,7 @@
 "by_name" = "за назвою";
 "by_performer" = "за виконавцем";
 "no_access_clubs" = "Немає груп, де ви є адміністратором.";
+"no_access_playlists" = "Ви ще не створювали списки відтворюванн.";
 "audio_successfully_uploaded" = "Аудіо було успішно завантажено і наразі обробляється.";
 
 "broadcast_audio" = "Трансляція аудіо до статусу";
@@ -859,6 +909,8 @@
 "repeat_tip" = "Повтор";
 "shuffle_tip" = "Перемішати";
 "mute_tip" = "Вимкнути звук";
+"playlist_hide_from_search" = "Не відображати в пошуку";
+"confirm_deleting_audio" = "Ви дійсно хочете повністю видалити аудіозапис?";
 
 /* Notifications */
 
@@ -1087,6 +1139,7 @@
 "report_number" = "Скарга №";
 "list_of_reports" = "Лист скарг";
 "text_of_the_post" = "Текст допису";
+"delete_content" = "Видалити контент";
 "today" = "сьогодні";
 
 "will_be_watched" = "Скоро її розглянуть модератори";
@@ -1308,6 +1361,10 @@
 
 "description_too_long" = "Опис надто довгий.";
 
+"invalid_club" = "Ця група не існує.";
+"invalid_user" = "Цього користувача не існує.";
+"ignored_sources_limit" = "Перевищено ліміт ігнорованих джерел.";
+
 "invalid_audio" = "Пошкоджене аудіо.";
 "do_not_have_audio" = "У вас немає цього аудіо";
 "do_have_audio" = "Ви вже маєте цей аудіозапис.";
@@ -1322,7 +1379,12 @@
 "file_not_uploaded" = "Не вдалося завантажити файл.";
 "error_code" = "Код помилки: $1.";
 "ffmpeg_timeout" = "Тайм-аут очікування ffmpeg. Спробуйте завантажити файл ще раз.";
-"ffmpeg_not_installed" = "Не вдалося отримати доступ до файлу. Схоже, що ffmpeg не встановлено на цьому сервері.";
+"ffmpeg_not_installed" = "Не вдалося отримати доступ до файлу. Схоже, що FFmpeg не встановлено на цьому сервері.";
+"too_many_or_to_lack" = "Надто мало чи багато джерел.";
+
+"error_adding_source_regex" = "Помилка додавання джерела: неправильне посилання.";
+"error_adding_source_long" = "Помилка додавання джерела: занадто довге посилання.";
+"error_adding_source_sus" = "Помилка додавання джерела: підозріле посилання.";
 
 "gift_sent" = "Подарунок відправлено";
 "gift_sent_desc" = "Ви відправили <b>$1</b> за $2 голосів";
@@ -1366,7 +1428,7 @@
 "no_video_desc" = "Оберіть файл або вкажіть URL.";
 "error_occured" = "Виникла помилка";
 "error_video_damaged_file" = "Файл пошкоджений або не має відеозапису.";
-"error_video_incorrect_link" = "Вірогідно, посилання некоректне.";
+"error_video_incorrect_link" = "Можливо, посилання некоректне";
 "error_video_no_title" = "Відео не може бути опубліковано без назви.";
 
 "new_data_video" = "Оновлений опис з'явиться на сторінці з відео.";
@@ -1438,6 +1500,7 @@
 "admin_user_online_deceased" = "Небіжчик";
 "admin_club_search" = "Пошук груп";
 "admin_club_excludeglobalfeed" = "Не показувати записи у глобальній стрічці";
+"admin_club_enforceexcludeglobalfeed" = "Заборонити керівництву групи змінювати відображення в глобальній стрічці";
 "admin_services" = "Платні послуги";
 "admin_newgift" = "Новий подарунок";
 "admin_price" = "Ціна";
@@ -1468,6 +1531,8 @@
 "admin_about_instance" = "Інстанція";
 "admin_commerce_disabled" = "Комерція відключена системним адміністратором";
 "admin_commerce_disabled_desc" = "Налаштування ваучерів та подарунків будуть збережені, але не матимуть впливу.";
+"admin_longpool_broken" = "Longpool пошкоджено!";
+"admin_longpool_broken_desc" = "Перевірте існування файла за шляхом <code>$1</code> і чи видані в нього правильні права на запис.";
 "admin_banned_links" = "Заблоковані посилання";
 "admin_banned_link" = "Посилання";
 "admin_banned_domain" = "Домен";
@@ -1567,6 +1632,7 @@
 "question_confirm" = "Цю дію не можна скасувати. Ви переконані що хочете це зробити?";
 "confirm_m" = "Підтвердити";
 "action_successfully" = "Операція виконана успішно";
+"apply" = "Застосувати";
 
 /* User alerts */
 
@@ -1817,13 +1883,15 @@
 
 /* Search */
 
-"s_people" = "Люди";
+"s_params" = "Параметри пошуку";
+"s_people" = "Користувачі";
 "s_groups" = "Спільноти";
 "s_apps" = "Застосунки";
 "s_posts" = "Дописи";
 "s_comments" = "Коментарі";
 "s_videos" = "Відео";
 "s_audios" = "Музика";
+"s_audios_playlists" = "Плейлисти";
 "s_by_people" = "по людям";
 "s_by_groups" = "по спільнотах";
 "s_by_posts" = "по дописах";
@@ -1831,6 +1899,7 @@
 "s_by_videos" = "по відео";
 "s_by_apps" = "по застосункам";
 "s_by_audios" = "по музиці";
+"s_by_audios_playlists" = "по плейлистам";
 
 "s_order_by" = "Сортувати за...";
 
@@ -1841,6 +1910,10 @@
 "s_order_by_length" = "Довжиною";
 "s_order_by_listens" = "Кількістю прослуховувань";
 "s_order_invert" = "Інвертувати";
+"s_order_by_reg_date" = "За датою реєстрації";
+"s_order_by_creation_date" = "За датою створення";
+"s_order_by_publishing_date" = "За датою публікації";
+"s_order_by_upload_date" = "По даті завантаження";
 
 "s_by_date" = "За датою";
 "s_registered_before" = "Зареєстровано до";
@@ -1853,14 +1926,24 @@
 "s_now_on_site" = "зараз на сайті";
 "s_with_photo" = "з фото";
 "s_only_in_names" = "тільки в іменах";
+"s_only_youtube" = "тільки з YouTube";
 
-"s_any" = "будь-який";
+"s_any" = "будь-які";
+"s_any_single" = "будь-який";
 "reset" = "Очистити";
 
-"closed_group_post" = "Цей допис з приватної групи";
+"closed_group_post" = "Допис з приватної стіни";
 "deleted_target_comment" = "Цей коментар належить до видаленого допису";
 
 "no_results" = "Немає результатів";
+"s_only_performers" = "За виконавцями";
+"s_with_lyrics" = "З текстом";
+
+"showing_x_y" = "(відображається $1—$2)";
+"no_results_by_this_query" = "За цим запитом нічого не знайдено.";
+"s_additional" = "Додатково";
+"s_it_is_you" = "це Ви";
+
 
 /* BadBrowser */
 
@@ -1937,7 +2020,7 @@
 "no_video_description" = "Оберіть файл або зазначте посилання.";
 "error_video" = "Трапилася помилка";
 "file_corrupted" = "Файл пошкоджений чи не має відеопотоку.";
-"link_incorrect" = "Ймовірно, посилання неправильне.";
+"link_incorrect" = "Ймовірно, посилання неправильне (спробуйте прибрати параметри, типа &t= чи &si=).";
 "no_name_error" = "Відео не може опубліковано без назви";
 "access_denied_error" = "Помилка доступу";
 "access_denied_error_description" = "Ви не маєте дозвіл редагувати цей ресурс";
