--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -18,7 +18,7 @@
 "registration" = "Реєстрація";
 "forgot_password" = "Забули пароль?";
 "checkbox_in_registration" = "Я згоден з <a href='/privacy'>політикою конфіденційності</a> і <a href='/terms'>правилами сайту</a>";
-"checkbox_in_registration_unchecked" = "Ви повинні погодитися з політикою конфіденційності та правилами, щоб зареєструватися.";
+"checkbox_in_registration_unchecked" = "Ви маєте погодитися з політикою конфіденційності та правилами, щоб зареєструватися.";
 "login_failed" = "Не вдалося увійти";
 "invalid_username_or_password" = "Неправильне ім'я користувача або пароль. <a href='/restore'>Забули пароль?</a>";
 "failed_to_register" = "Не вдалося зареєструватися";
@@ -149,7 +149,7 @@
 "you_can_add" = "Ви можете";
 "add_to_friends_m" = "додати його в друзі.";
 "add_to_friends_f" = "додати її в друзі.";
-"register_to_access_page_m" = "Зареєстуйтесь, щоб отримати доступ до його сторінки.";
+"register_to_access_page_m" = "Зареєструйтесь, щоб отримати доступ до його сторінки.";
 "register_to_access_page_f" = "Зареєструйтесь, щоб отримати доступ до її сторінки.";
 "private_profile_warning" = "Цей профіль закритий, але ви маєте до нього доступ, тому що ви - адміністратор.";
 "private_profile_warning_desc" = "Поважайте право на особисте життя та не зловживайте цією можливістю.";
@@ -211,7 +211,7 @@
 "set_source_tip" = "Якщо ви використовуєте матеріали інших авторів, важливо вказувати посилання на оригінал.<br>Зробити це ви можете нижче.";
 "add_signature" = "Підпис автора";
 "contains_nsfw" = "Містить NSFW-контент";
-"nsfw_warning" = "Даний запис може містити контент 18+";
+"nsfw_warning" = "Цей допис може містити контент 18+";
 "report" = "Поскаржитися";
 "attach" = "Прикріпити";
 "detach" = "Відкріпити";
@@ -237,7 +237,7 @@
 "start_from_page" = "Починати зі сторінки";
 "all_posts" = "Всі дописи";
 "users_posts" = "Дописи $1";
-"clubs_posts" = "Дописи суспільства";
+"clubs_posts" = "Дописи спільноти";
 "others_posts" = "Чужі дописи";
 "show_more" = "Відобразити більше";
 
@@ -250,7 +250,7 @@
 "friends_delete" = "Видалити з друзів";
 "friends_reject" = "Скасувати заявку";
 "friends_accept" = "Прийняти заявку";
-"friends_leave_in_flw" = "Залишити у підписниках";
+"friends_leave_in_flw" = "Залишити в підписниках";
 "friends_add_msg" = "Тепер ви друзі.";
 "friends_rej_msg" = "Ви залишили користувача в підписниках.";
 "friends_rem_msg" = "Ви видалили користувача зі списку своїх друзів.";
@@ -307,14 +307,14 @@
 "join_community" = "Вступити в спільноту";
 "leave_community" = "Вийти зі спільноти";
 "check_community" = "Перегляд спільноти";
-"min_6_community" = "Назва повинна містити не менше 6 символів";
+"min_6_community" = "Назва має містити не менше 6 символів";
 "participants" = "Учасники";
 "groups" = "Спільноти";
 "meetings" = "Зустрічі";
 "create_group" = "Створити спільноту";
 "group_managers" = "Керівництво";
 "group_type" = "Тип спільноти";
-"group_type_open" = "Це відкрита спільнота. В неї може вступити будь-хто бажаючий.";
+"group_type_open" = "Це відкрита спільнота. В неї може вступити будь-хто охочий.";
 "group_type_closed" = "Це закрита спільноа. Для вступу необхідно подати заявку.";
 "creator" = "Автор";
 "administrators" = "Адміністратори";
@@ -475,13 +475,13 @@
 "photos_successfully_uploaded" = "Фотографії було завантажено";
 "click_to_go_to_album" = "Натисніть, щоб перейти до альбому.";
 "error_uploading_photo" = "Помилка завантаження фотографії";
-"too_many_pictures" = "Не більше 10 фотографій";
+"too_many_pictures" = "Не більше ніж 10 фотографій";
 
 "drag_files_here" = "Перетягніть файли сюди";
 "only_images_accepted" = "Файл \"$1\" не є зображенням";
 "max_filesize" = "Максимальний розмір файлу — $1 мегабайт";
 
-"uploading_photos_from_computer" = "Завантаження фотографій з Вашого ПК";
+"uploading_photos_from_computer" = "Завантаження фотографій із Вашого ПК";
 "supported_formats" = "Підтримувані формати зображень: JPG, PNG й GIF.";
 "max_load_photos" = "Ви можете завантажити до 10 фотографій за один раз.";
 "tip" = "Порада";
@@ -511,9 +511,9 @@
 "create_note" = "Створити нотатку";
 "edit_note" = "Редагувати нотатку";
 "actions" = "Дії";
-"notes_start_screen" = "За допомогою нотаток Ви можете ділитися подіями з життя з друзями, а також бути в курсі того, що відбувається у них.";
+"notes_start_screen" = "З допомогою нотаток Ви можете ділитися подіями з життя з друзями, а також бути в курсі того, що відбувається у них.";
 "note_preview" = "Попередній перегляд";
-"note_preview_warn" = "Увага: Це всього лише попередній перегляд";
+"note_preview_warn" = "Увага: Це лише попередній перегляд";
 "note_preview_warn_details" = "Після збереження, нотатки можуть мати інший вигляд. Також не викликайте перегляд занадто часто.";
 "note_preview_empty_err" = "Попередній перегляд неможливий: Немає імені чи змісту.";
 "edited" = "Відредаговано";
@@ -646,10 +646,10 @@
 "profile_type" = "Тип профіля";
 "profile_type_open" = "Відкритий";
 "profile_type_closed" = "Закритий";
-"your_email_address" = "Адрес Вашої електронної пошти";
-"your_page_address" = "Адрес Вашої сторінки";
+"your_email_address" = "Адреса Вашої електронної пошти";
+"your_page_address" = "Адреса Вашої сторінки";
 "page_address" = "Адрес сторінки";
-"current_email_address" = "Поточний адреса";
+"current_email_address" = "Поточна адреса";
 "new_email_address" = "Нова адреса";
 "save_email_address" = "Зберегти адресу";
 "page_id" = "ID сторінки";
@@ -680,7 +680,7 @@
 "profile_deactivate_reason_1" = "У мене є інший обліковий запис на сайті";
 "profile_deactivate_reason_1_text" = "Я створив нову сторінку, і тепер хочу стерти своє минуле.";
 "profile_deactivate_reason_2" = "Сайт забирає в мене надто багато часу";
-"profile_deactivate_reason_2_text" = "Нехай цей сайт хороший і прекрасний, але він забирає у мене час, який мені потрібний для роботи та життя.";
+"profile_deactivate_reason_2_text" = "Нехай цей сайт хороший і прекрасний, але він забирає в мене час, який мені потрібний для роботи та життя.";
 "profile_deactivate_reason_3" = "Сайт містить дуже багато неприйнятних матеріалів";
 "profile_deactivate_reason_3_text" = "Я знайшов достатньо порнографії та піратського контенту – вистачить на все життя. Тепер я йду.";
 "profile_deactivate_reason_4" = "Мене турбує безпека моїх даних";
@@ -741,7 +741,7 @@
 "viewing" = "Переглянути";
 
 /* OAuth */
-"identifies_itself_as" = "ідентифікуюче себе як $1";
+"identifies_itself_as" = "що ідентифікує себе як $1";
 "located_at_url" = "розміщене за адресою $1";
 "wants_your_token" = "запитує доступ до вашого акаунта";
 "app_will_have_access_to" = "Застосунку буде доступно:";
@@ -896,7 +896,7 @@
 "by_name" = "за назвою";
 "by_performer" = "за виконавцем";
 "no_access_clubs" = "Немає спільнот, де ви є адміністратором.";
-"no_access_playlists" = "Ви ще не створювали списки відтворюванн.";
+"no_access_playlists" = "Ви ще не створювали списки відтворювання.";
 "audio_successfully_uploaded" = "Аудіо було успішно завантажено і наразі обробляється.";
 
 "broadcast_audio" = "Трансляція аудіо до статусу";
@@ -973,7 +973,7 @@
 "voucher_explanation" = "Введіть серійний номер ваучера. Зазвичай він вказується в чеку або в повідомленні.";
 "voucher_explanation_ex" = "Зверніть увагу, що термін дії ваучерів може закінчитися і ви можете використовувати їх тільки один раз.";
 "invalid_voucher" = "Ваучер недійсний";
-"voucher_bad" = "Можливо, ви ввели неправильний серійний номер, вже використовували даний ваучер або ж він просто закінчився.";
+"voucher_bad" = "Можливо, ви ввели неправильний серійний номер, вже використовували цей ваучер або ж він просто закінчився.";
 "voucher_good" = "Ваучер активовано";
 "voucher_redeemed" = "Ваучер успішно активовано. Вам будуть нараховані голоси, але цим кодом ви більше не зможете активувати його.";
 "redeem" = "Активувати ваучер";
@@ -1197,7 +1197,7 @@
 "ec_header" = "Підтвердження реєстрації";
 "ec_title" = "Дякую!";
 "ec_1" = "<b>$1</b>, ваша реєстрація майже закінчена. Протягом кількох хвилин на вашу адресу електронної пошти повинен прийти лист із посиланням для підтвердження вашої адреси пошти.";
-"ec_2" = "Якщо з якихось причин Вам не надійшов лист, перевірте папку Спам. Якщо листа не виявиться і там, то ви можете перенаправити листа.";
+"ec_2" = "Якщо з якихось причин Вам не надійшов лист, перевірте теку Спам. Якщо листа не виявиться і там, то ви можете перенаправити листа.";
 "ec_resend" = "Передати лист";
 
 /* Messages */
@@ -1318,7 +1318,7 @@
 "suspicious_registration_attempt" = "Підозріла спроба реєстрації";
 "suspicious_registration_attempt_comment" = "Ви намагалися зареєструватися з підозрілого місця.";
 "rate_limit_error" = "Обмеження запитів";
-"rate_limit_error_comment" = "У $1 не можна робити запити так часто. Код виключення: $2.";
+"rate_limit_error_comment" = "У $1 не можна робити запити так часто";
 "not_enough_permissions" = "Недостатньо прав";
 "not_enough_permissions_comment" = "У вас недостатньо прав, щоб виконувати цю дію.";
 "login_required_error" = "Недостатньо прав";
@@ -1356,8 +1356,8 @@
 "error_when_gifting" = "Не вдалося подарувати";
 "error_user_not_exists" = "Користувач або набір не існують.";
 "error_no_rights_gifts" = "Не вдалося підтвердити права на подарунок.";
-"error_no_more_gifts" = "У вас більше не залишилось цих подарунків.";
-"error_no_money" = "На жаль, Вам бракує голосів";
+"error_no_more_gifts" = "Для Вас, більше не залишилось цих подарунків.";
+"error_no_money" = "Вам бракує голосів";
 
 "description_too_long" = "Опис надто довгий.";
 
@@ -1369,9 +1369,9 @@
 "do_not_have_audio" = "У вас немає цього аудіо";
 "do_have_audio" = "Ви вже маєте цей аудіозапис.";
 
-"set_playlist_name" = "Введіть назву плейліста.";
-"playlist_already_bookmarked" = "Цей плейліст вже є у вашій збірці.";
-"playlist_not_bookmarked" = "Цього плейліст немає у вашій збірці.";
+"set_playlist_name" = "Введіть назву списка відвторення.";
+"playlist_already_bookmarked" = "Цей список відтворення вже є у вашій збірці.";
+"playlist_not_bookmarked" = "Цього списку відтворення немає у вашій збірці.";
 "invalid_cover_photo" = "Помилка при завантаженні фото обкладинки.";
 "not_a_photo" = "Завантажений файл не схожий на фотографію.";
 "file_too_big" = "Файл занадто великий.";
@@ -1433,14 +1433,12 @@
 
 "new_data_video" = "Оновлений опис з'явиться на сторінці з відео.";
 "error_deleting_video" = "Не вдалося видалити відео";
-"login_please" = "Ви не увійшли в аккаунт.";
+"login_please" = "Ви не увійшли в акаунт.";
 "invalid_code" = "Не вдалося підтвердити номер телефону: неправильний код.";
 
 "error_max_pinned_clubs" = "Знаходитись у лівому меню можуть максимум 10 спільнот";
 "error_viewing_subs" = "Ви не можете переглядати лист підписок $1.";
 "error_status_too_long" = "Статус надто довгий ($1 символів замість 255 символів)";
-"death" = "Сміерць...";
-"nehay" = "Няхай жыве!";
 "user_successfully_banned" = "Користувача успішно заблоковано.";
 
 "content_is_deleted" = "Коментар видалено, а користувач отримав попередження.";
@@ -1458,8 +1456,8 @@
 "last_actions" = "Останні дії";
 "unban_user_action" = "Розблокувати користувача";
 "warn_user_action" = "Попередити користувача";
-"ban_in_support_user_action" = "Заблокувати у тех.підтримці";
-"unban_in_support_user_action" = "Розблокувати у тех.підтримці";
+"ban_in_support_user_action" = "Заблокувати у технічній підтримці";
+"unban_in_support_user_action" = "Розблокувати у технічній підтримці";
 "changes_history" = "Історія редагування";
 
 /* Admin panel */
@@ -1761,7 +1759,7 @@
 "tour_section_14" = "Мобільна версія";
 
 "tour_section_1_title_1" = "З чого почати?";
-"tour_section_1_text_1" = "Реєстрація аккаунту є першим та фундаментальним етапом для початку вашого використання на цьому сайті";
+"tour_section_1_text_1" = "Реєстрація акаунта є першим та фундаментальним етапом для початку вашого використання на цьому сайті";
 "tour_section_1_text_2" = "Для реєстрації нам знадобиться ім'я, E-Mail та пароль.";
 "tour_section_1_text_3" = "<b>Пам'ятайте:</b> Ваш E-mail буде використовуватися як логін для входу на сайт. Також ви можете не зазначати прізвище під час реєстрації. У разі втрати пароля для входу на сайт, скористайтеся розділом <a href='/restore'>відновлення</a>";
 "tour_section_1_bottom_text_1" = "Реєструючись на сайті, ви погоджуєтеся з <a href='/about'>правилами сайту</a> та <a href='/privacy'>політикою конфіденційності</a>";
@@ -1791,7 +1789,7 @@
 
 "tour_section_4_title_1" = "Пошук";
 "tour_section_4_text_1" = "Розділ &quot;Пошук&quot; має на меті шукати користувачів та групи.";
-"tour_section_4_text_2" = "Даний розділ сайту з часом буде покращуватися та збільшуватися.";
+"tour_section_4_text_2" = "Цей розділ сайту з часом буде покращуватися та збільшуватися.";
 "tour_section_4_text_3" = "Для початку пошуку, треба знати ім'я (чи прізвище); а якщо шукаєте групу, то потрібно знати її назву.";
 "tour_section_4_title_2" = "Швидкий пошук";
 "tour_section_4_text_4" = "Якщо Ви бажаєте будь-яким чином зберегти власний час, то поле пошуку доступна і в шапці сайту";
@@ -1834,7 +1832,7 @@
 "tour_section_11_title_1" = "Теми оформлення";
 "tour_section_11_text_1" = "Після реєстрації, як стандартна тема, у вас буде класична тема оформлення";
 "tour_section_11_text_2" = "Деяких нових користувачів може налякати чинна класична тема, яка виглядає дуже архаїчно";
-"tour_section_11_text_3" = "<b>Але не біда:</b> Ви можете обрати іншу тему з каталогу, або створити свою, ознаомившись з <a href='https://docs.ovk.to/'>документацією</a>";
+"tour_section_11_text_3" = "<b>Але не біда:</b> Ви можете обрати іншу тему з каталогу, або створити свою, ознайомившись з <a href='https://docs.ovk.to/'>документацією</a>";
 "tour_section_11_bottom_text_1" = "Каталог тем доступний в розділі &quot;Мої Налаштування&quot; в вкладці &quot;Інтерфейс&quot; ";
 "tour_section_11_wordart" = "<img src='/assets/packages/static/openvk/img/tour/wordart.png' width='65%'>";
 
@@ -1847,7 +1845,7 @@
 "tour_section_12_text_2_2" = "Ці налаштування буде видно тільки Вам";
 "tour_section_12_title_3" = "Редагування правого меню";
 "tour_section_12_text_3_1" = "За потреби, ви можете приховати непотрібні розділи сайту";
-"tour_section_12_text_3_2" = "<b>Нагадування: </b>Розділи першої необхідності (Моя Сторінка; Мої Друзі; Мої Відповіді; Мої Налаштування) приховати не можна";
+"tour_section_12_text_3_2" = "<b>Нагадування: </b>Розділи першої потреби (Моя Сторінка; Мої Друзі; Мої Відповіді; Мої Налаштування) приховати не можна";
 "tour_section_12_title_4" = "Вид дописів";
 "tour_section_12_text_4_1" = "Якщо набрид старий дизайн стіни, який був у колись популярному оригінальному ВКонтакті, то ви завжди можете змінити вигляд дописів на Мікроблог";
 "tour_section_12_text_4_2" = "Вид дописів можна змінювати між двома варіантами в будь-який час";
@@ -1861,11 +1859,11 @@
 "tour_section_13_title_1" = "Ваучер";
 "tour_section_13_text_1" = "Ваучер в OpenVK це щось на кшталт промокоду на додавання будь-якої валюти (відсотки рейтингу, голосів тощо)";
 "tour_section_13_text_2" = "Подібні купони створюються за будь-якими значущими подіями та святами. Слідкуйте за <a href='https://t.me/openvk'>Telegram каналом</a> OpenVK";
-"tour_section_13_text_3" = "Після активації будь-якого ваучера, задана адміністраторами валюта буде перечислена в вашу користь";
+"tour_section_13_text_3" = "Після активації будь-якого ваучера, задана адміністраторами валюта буде перерахована у вашу користь";
 "tour_section_13_text_4" = "<b>Пам'ятайте: </b>Усі ваучери мають обмежений термін активації";
 "tour_section_13_bottom_text_1" = "Ваучери складаються з 24 цифр та літер";
 "tour_section_13_bottom_text_2" = "Активація пройшла вдало (наприклад, нам зарахували 100 голосів)";
-"tour_section_13_bottom_text_3" = "<b>Зверніть увагу: </b>Якщо ви вже активували ваучер на цьому аккаунті, його не можна повторно використати.";
+"tour_section_13_bottom_text_3" = "<b>Зверніть увагу: </b>Якщо ви вже активували ваучер на цьому акаунті, його не можна повторно використати.";
 
 "tour_section_14_title_1" = "Мобільна версія";
 "tour_section_14_text_1" = "Наразі мобільної вебверсії сайту поки що немає, проте є мобільний додаток для Android";
@@ -1891,15 +1889,15 @@
 "s_comments" = "Коментарі";
 "s_videos" = "Відео";
 "s_audios" = "Музика";
-"s_audios_playlists" = "Плейлисти";
-"s_by_people" = "по людям";
+"s_audios_playlists" = "Списки відтворення";
+"s_by_people" = "по користувачах";
 "s_by_groups" = "по спільнотах";
 "s_by_posts" = "по дописах";
 "s_by_comments" = "по коментарях";
 "s_by_videos" = "по відео";
-"s_by_apps" = "по застосункам";
+"s_by_apps" = "по застосунках";
 "s_by_audios" = "по музиці";
-"s_by_audios_playlists" = "по плейлистам";
+"s_by_audios_playlists" = "по списках відтворення";
 
 "s_order_by" = "Сортувати за...";
 
@@ -1948,7 +1946,7 @@
 /* BadBrowser */
 
 "deprecated_browser" = "Застарілий браузер";
-"deprecated_browser_description" = "Для перегляду цього контенту Вам необхідний >Firefox ESR 52 або еквівалент по функціоналу навігатор по всесвітньою мережею інтернет. Співчуваємо про це.";
+"deprecated_browser_description" = "Для перегляду цього контенту Вам необхідний браузер, новіший за Firefox ESR 52 або новіший еквівалентний по функціоналу веббраузер для перегляду всесвітньої мережі Інтернет.";
 
 /* Statistics */
 
