--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -1468,7 +1468,7 @@
 
 "error_adding_source_regex" = "Ошибка добавления источника: некорректная ссылка.";
 "error_adding_source_long" = "Ошибка добавления источника: слишком длинная ссылка.";
-"error_adding_source_sus" = "Ошибка добавления источника: подозрительная ссылка.";
+"error_adding_source_sus" = "Ошибка добавления источника: гиперссылка заблокирована.";
 
 /* Admin actions */
 
