--- a/locales/uk.strings
+++ b/locales/uk.strings
@@ -1439,6 +1439,8 @@
 "error_max_pinned_clubs" = "Знаходитись у лівому меню можуть максимум 10 спільнот";
 "error_viewing_subs" = "Ви не можете переглядати лист підписок $1.";
 "error_status_too_long" = "Статус надто довгий ($1 символів замість 255 символів)";
+"death" = "Смерть...";
+"nehay" = "Нехай живе";
 "user_successfully_banned" = "Користувача успішно заблоковано.";
 
 "content_is_deleted" = "Коментар видалено, а користувач отримав попередження.";
